--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,147 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     vertical-align: top;
     box-sizing: border-box;
-    
+
 }
-.container{
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.container {
     max-width: 780px;
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
 }
+
+body,
+html {
+    max-height: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+header {
+    width: 100%;
+    height: 200px;
+    background-color: grey;
+}
+
+.wrapper-header {}
+
+header .container {}
+
+.navigation {
+    width: 100%;
+}
+
+.navigation__list-ref {
+    display: flex;
+
+}
+
+p {
+    line-height: 150%;
+}
+.my-pic{
+    width: 170px;
+}
+.wrapper-reference {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+
+header .navigation__referenc {
+    text-transform: uppercase;
+}
+
+.main {
+    min-height: 100%;
+    height: 100%;
+    margin-bottom: -200px;
+}
+
+.wrapper-page {
+    display: flex;
+
+}
+
+.main .container {}
+
+.main .container section {}
+
+.main .section {}
+
+.main .section p {}
+
+.main .main-title {}
+
+.main .purpose {}
+
+.main .section__skills {}
+
+.main .section__skills p {}
+
+.main .title-section2 {}
+
+.main .section__education {}
+
+.main .wrapper-col {}
+
+.main col1 {}
+
+.main col3 {}
+
+.main col4 {}
+
+.main .contact-info {}
+
+.main .contact-info__title {}
+
+.main .contact-info__phone {}
+
+.main .contact-info__phone a {}
+
+.main .contact-info__skype {}
+
+.main .contact-info__skype a {}
+
+.main .contact-info__telegramm {}
+
+.main .contact-info__telegramm a {}
+
+.main .contact-info__email {}
+
+.main .contact-info__email a {}
+
+.main .contact-info__facebook {}
+
+.main .contact-info__facebook a {}
+
+.push {
+    height: 200px;
+}
+
+footer {
+    max-height: 200px;
+    height: 100%;
+    background-color: grey;
+}
+
+footer .wrapper-content {}
+
+footer .container {}
+
+footer .footer__titel {}
+
+footer .footer__titel a {}
+
+footer p {}
+
+footer p a {}
