--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,16 @@ a {
     color: black;
 }
 
+h1,
+h2,
+h3 {
+    padding-bottom: 10px;
+}
+
+section {
+    padding-bottom: 30px;
+}
+
 .container {
     max-width: 780px;
     width: 100%;
@@ -20,20 +30,28 @@ a {
 
 body,
 html {
-    max-height: 100%;
     height: 100%;
-    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
 
 header {
+    position: relative;
     width: 100%;
-    height: 200px;
-    background-color: grey;
+    max-height: 100px;
+    height: 100%;
+    box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
+    background-color: rgba(128, 128, 128, 0.2);
+    border: 2px solid rgba(128, 128, 128, 0.3);
 }
 
-.wrapper-header {}
-
-header .container {}
+.wrapper-header {
+    height: 100%;
+    padding: 20px;
+}
 
 .navigation {
     width: 100%;
@@ -45,93 +63,188 @@ header .container {}
 }
 
 p {
-    line-height: 150%;
+    font-size: 16px;
+    line-height: 120%;
+    padding-top: 10px;
+    color: rgba(0, 0, 0, .7)
 }
-.my-pic{
-    width: 170px;
+
+.my-pic {
+    width: 150px;
 }
+
 .wrapper-reference {
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding-top: 30px;
 }
 
-header .navigation__referenc {
-    text-transform: uppercase;
+.navigation__referenc {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.navigation__referenc:hover {
+    text-decoration: underline;
+
+}
+
+.git-text,
+.my-pet,
+.certificates {
+    font-style: italic;
+    letter-spacing: 1px;
+    color: #000;
+    text-shadow: 1px 3px 0 #969696, 1px 13px 5px #aba8a8;
+}
+
+.git-image::before {
+    content: '';
+    background-image: url('../images/git-cat.svg');
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: 20px;
+    left: 35px;
+    width: 50px;
+    height: 50px;
 }
 
 .main {
-    min-height: 100%;
-    
-    margin-bottom: -200px;
+    /* min-height: 100%;*/
+    /* margin-bottom: -200px;*/
 }
 
 .wrapper-page {
     display: flex;
+    flex: 1 0 auto;
+    padding: 30px;
 
 }
+.narrow-window-text-show{
+    display: none;
+}
+.wide-winsow-text-show{
+        display: block;
+    }
+.content {
+    width: 100%;
+    padding: 30px;
+    box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
+    /*background-color: rgba(128, 128, 128, 0.1);*/
+    border: 1px solid rgba(128, 128, 128, 0.3);
+}
 
-.main .container {}
+.container section {}
 
-.main .container section {}
+.section__introduction {
+    display: flex;
+}
 
-.main .section {}
+.section p {}
 
-.main .section p {}
+.main-title {}
 
-.main .main-title {}
+.purpose {}
 
-.main .purpose {}
+.section__skills {}
 
-.main .section__skills {}
+.section__skills p {}
 
-.main .section__skills p {}
+.title-section2 {}
 
-.main .title-section2 {}
+.section__education {}
 
-.main .section__education {}
+.wrapper-col {
+    display: flex;
+    width: 100%;
+    padding-bottom: 10px;
+}
 
-.main .wrapper-col {}
+col1 {
+    max-width: 85px;
+    width: 100%;
+}
 
-.main col1 {}
+col3 {
+    padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+}
 
-.main col3 {}
+col4 {
+    margin-left: auto;
+    max-width: 75px;
+    width: 100%;
+}
 
-.main col4 {}
+.contact-info {}
 
-.main .contact-info {}
+.contact-info__title {}
 
-.main .contact-info__title {}
+.contact-info__phone {}
 
-.main .contact-info__phone {}
+.contact-info__phone a {}
 
-.main .contact-info__phone a {}
+.contact-info__skype {}
 
-.main .contact-info__skype {}
+.contact-info__skype a {}
 
-.main .contact-info__skype a {}
+.contact-info__telegramm {}
 
-.main .contact-info__telegramm {}
+.contact-info__telegramm a {}
 
-.main .contact-info__telegramm a {}
+.contact-info__email {}
 
-.main .contact-info__email {}
+.contact-info__phone a,
+.contact-info__skype a,
+.contact-info__telegramm a,
+.contact-info__email a {
+    opacity: 0.8;
+    font-weight: 400;
+}
 
-.main .contact-info__email a {}
+.contact-info__facebook {}
 
-.main .contact-info__facebook {}
+.contact-info__facebook a {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: rgba(128, 128, 128, .9)
+}
 
-.main .contact-info__facebook a {}
+.contact-info__phone,
+.contact-info__skype,
+.contact-info__telegramm,
+.contact-info__email,
+.contact-info__facebook {
+    color: #000;
+    font-weight: 700;
+}
 
-.push {
-    height: 200px;
+.contact-info__phone:hover,
+.contact-info__skype:hover,
+.contact-info__telegramm:hover,
+.contact-info__email:hover,
+.contact-info__facebook:hover {
+    text-decoration: underline;
+    opacity: 1;
 }
 
 footer {
-    max-height: 200px;
-    height: 100%;
-    background-color: grey;
+    /*max-height: 200px;*/
+    flex-shrink: 0;
+    background-color: rgba(128, 128, 128, 0.2);
+    border: 2px solid rgba(128, 128, 128, 0.3);
+
+}
+
+.direction-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 footer .wrapper-content {}
@@ -145,3 +258,48 @@ footer .footer__titel a {}
 footer p {}
 
 footer p a {}
+
+
+@media only screen and (max-width : 1200px) {
+    
+}
+
+
+@media only screen and (max-width : 992px) {
+    
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px){
+    .section__introduction {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .contact-info{
+        padding-bottom: 30px;
+    }
+    .wide-winsow-text-show{
+        display: none;
+    }
+    .narrow-window-text-show{
+    display: block;
+}
+} 
+
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+    .wrapper-page {
+    padding: 5px;
+}
+        
+}
+
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width : 320px) {
+    .git-image::before{
+        left: 120px;
+            bottom: 0;
+    }
+}
