--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ a {
 }
 
 h1,
-h2,
-h3 {
+h2
+ {
     padding-bottom: 10px;
 }
 
@@ -41,7 +41,7 @@ body {
 header {
     position: relative;
     width: 100%;
-    max-height: 100px;
+    max-height: 120px;
     height: 100%;
     box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
     background-color: rgba(128, 128, 128, 0.2);
@@ -51,6 +51,7 @@ header {
 .wrapper-header {
     height: 100%;
     padding: 20px;
+    padding-top: 30px;
 }
 
 .navigation {
@@ -105,7 +106,7 @@ p {
     background-image: url('../images/git-cat.svg');
     background-repeat: no-repeat;
     position: absolute;
-    bottom: 20px;
+    bottom: 25px;
     left: 35px;
     width: 50px;
     height: 50px;
@@ -245,6 +246,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 15px
 }
 
 footer .wrapper-content {}
@@ -278,7 +280,7 @@ footer p a {}
     .contact-info{
         padding-bottom: 30px;
     }
-    .wide-winsow-text-show{
+    .wide-window-text-show{
         display: none;
     }
     .narrow-window-text-show{
@@ -297,7 +299,7 @@ footer p a {}
 
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width : 320px) {
+@media only screen and (max-width : 329px) {
     .git-image::before{
         left: 120px;
             bottom: 0;
