--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 
+
 * {
 	margin: 0;
 	padding: 0;
@@ -20,14 +21,10 @@ h2 {
 	padding-bottom: 10px;
 }
 
-section {
-	padding-bottom: 30px;
-}
 
 .container {
 	max-width: 780px;
 	width: 100%;
-	padding: 0 15px;
 	margin: 0 auto;
 }
 
@@ -42,7 +39,9 @@ body {
 	flex-direction: column;
 }
 
-
+ul li{
+	list-style:none;
+}
 h1, h2, h3 {
 	font-family: 'Oswald', sans-serif;
 	font-weight: 300;
@@ -55,17 +54,19 @@ span {
 	font-weight: 300;
 	letter-spacing: 1px;
 }
+
 h1.main-title {
 	font-size: 1.6rem;
 	font-weight: 400;
+	color: #fff;
+
 }
 
 
 header {
 	position: relative;
 	width: 100%;
-	max-height: 120px;
-	height: 100%;
+
 	box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
 	background-color: #03204d;
 	/*background-color: rgba(128, 128, 128, 0.2);*/
@@ -94,14 +95,6 @@ header {
 	border: 1px solid rgba(250, 250, 250, .5);
 }
 
-.navigation {
-	width: 100%;
-}
-
-.navigation__list-ref {
-	display: flex;
-
-}
 
 p {
 	font-family: 'Oswald', sans-serif;
@@ -114,37 +107,43 @@ p {
 	letter-spacing: 1px;
 }
 
+.img-wrapper {
+	position: relative;
+	width: 100px;
+	height: 100px;
+}
+
 .my-pic {
-	width: 145px;
-	height:175px;
+	position: absolute;
+	width: 100%;
+	display: block;
+	border-radius: 50%;
 }
 
 .wrapper-reference {
-	position: relative;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
+	list-style: none;
+	margin-top: 5px;
+
 
 }
 
-.navigation__referenc {
+.navigation__reference {
 	font-weight: 700;
 	font-size: 18px;
 }
 
-.navigation__referenc:hover {
+.navigation__reference:hover {
 	text-decoration: underline;
+	text-decoration-color: #ff0000;
 
 }
 
-
-
-.git-text, .my-pet, .certificates {
+.git-text, .my-pet, .certificates, .nav-text {
 	font-family: Oswald, 'sans-serif';
 	font-weight: 400;
 	line-height: 100%;
 	font-size: 1rem;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	letter-spacing: 1px;
 	color: #f3f3f3;
 	position: relative;
@@ -152,29 +151,9 @@ p {
 
 }
 
-.git-image::before {
-	content: '';
-	background-image: url('../images/git-cat.svg');
-	background-repeat: no-repeat;
-	position: absolute;
-	top: -31px;
-	left: 16px;
-	width: 68px;
-	height: 68px;
-	z-index: 10;
-
-}
-
-.main {
-	/* min-height: 100%;*/
-	/* margin-bottom: -200px;*/
-}
-
 .wrapper-page {
 	display: flex;
 	flex: 1 0 auto;
-	padding: 30px;
-
 }
 
 .narrow-window-text-show {
@@ -187,7 +166,7 @@ p {
 
 .content {
 	width: 100%;
-	padding: 30px;
+	padding: 10px 20px 0 20px;
 	box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
 	/*background-color: rgba(128, 128, 128, 0.1);*/
 	border: 1px solid rgba(128, 128, 128, 0.3);
@@ -203,7 +182,7 @@ p {
 .wrapper-col {
 	display: flex;
 	width: 100%;
-	padding-bottom: 10px;
+	padding: 0 15px 10px 15px;
 }
 
 .col1,
@@ -230,19 +209,21 @@ p {
 	max-width: 75px;
 	width: 100%;
 }
-
+.section__experience.p15{
+	padding: 10px 15px 20px 15px;
+}
 
 .contact-info__phone a,
 .contact-info__skype a,
 .contact-info__telegramm a,
 .contact-info__email a {
-	color: #1c2026;
+	color: #fff;
 	opacity: 0.8;
-	font-weight: 400;
+	font-weight: 200;
 	letter-spacing: 1px;
+	padding-left: 5px;
 }
 
-.contact-info__facebook {}
 
 .contact-info__facebook a {
 	font-size: 1.6rem;
@@ -251,10 +232,13 @@ p {
 	color: #03204d;
 }
 
-
 .contact-info {
 	display: flex;
 	flex-direction: column;
+	margin: 0 auto;
+	position: relative;
+	z-index: 30;
+	margin-top: auto;
 }
 
 .contact-info__phone,
@@ -262,10 +246,12 @@ p {
 .contact-info__telegramm,
 .contact-info__email,
 .contact-info__facebook {
-	color: #1c2026;
+	color: #fff;
 	display: inline-flex;
 	font-weight: 400;
 	letter-spacing: 1px;
+	opacity: 1;
+
 }
 
 .contact-info__phone:hover,
@@ -274,8 +260,9 @@ p {
 .contact-info__email:hover,
 .contact-info__facebook:hover {
 	text-decoration: underline;
+	text-decoration-color: #ff0000;
 	cursor: pointer;
-	color: #03204d;
+	color: #fff;
 }
 
 .contact-info__phone a:hover,
@@ -284,11 +271,131 @@ p {
 .contact-info__email a:hover,
 .contact-info__facebook a:hover {
 	text-decoration: underline;
-	color: #03204d;
+	text-decoration-color: #ff0000;
+	color: #fff;
 
 }
 
+.dropdown {
+	display: block;
+	color: #fff;
+	position: relative;
+	z-index: 100;
+	padding-right: 10px;
+}
 
+.dropdown-title {
+	white-space: nowrap;
+	display: inline-block;
+	font-family: Oswald, 'sans-serif';
+	font-weight: 400;
+	letter-spacing: 1px;
+	text-transform: capitalize;
+
+}
+
+.dropdown-title:hover {
+	cursor: pointer;
+	text-decoration: underline;
+	text-decoration-color: #ff0000;
+
+}
+
+.dropdown-menu {
+	display: none;
+	position: absolute;
+	padding: 8px;
+	border: 1px solid #333;
+	background-color: #fff;
+	border-radius: 4px 5px 5px 5px;
+	top: 0;
+	left: 76px;
+
+
+}
+
+.dropdown:hover .dropdown-menu {
+	cursor: pointer;
+	display: block;
+
+}
+
+.dropdown-items {
+	display: block;
+	margin-bottom: 5px;
+
+}
+
+.dropdown-items:hover {
+	cursor: pointer;
+	text-decoration: underline;
+	text-decoration-color: #ff0000;
+}
+
+.responsibility-list li {
+	position: relative;
+	padding-left: 15px;
+
+}
+
+.responsibility-list li:before {
+	content: '';
+	display: block;
+	position: absolute;
+	background-color: #03204d;
+	width: 7px;
+	height: 2px;
+	background-repeat: no-repeat;
+	top: 10px;
+	left: 0;
+}
+
+.active:before {
+	content: '';
+	display: block;
+	position: absolute;
+	background-color: #ff0000;
+	width: 100%;
+	height: 1px;
+	background-repeat: no-repeat;
+	bottom: 2px;
+	left: 0;
+}
+
+.responsibility-list li {
+	list-style: none;
+	font-size: 14px;
+	letter-spacing: 1px;
+	font-weight: 300;
+}
+
+.responsibility-title {
+	font-weight: 400;
+	opacity: 1;
+	color: #03204d;
+}
+
+.head-style {
+	color: #03204d;
+	font-weight: 300;
+}
+
+.section__experience {
+	padding: 10px 0 20px 0;
+	border-bottom: 1px solid rgba(0, 0, 0, .2);
+}
+
+.wrapper-nav {
+	margin: 0 auto;
+	max-width: 187px;
+	width: 100%;
+}
+.section__experience p{
+	font-size: 14px;
+	letter-spacing: 1px;
+	font-weight: 300;
+	opacity: 1;
+}
 footer {
 	/*max-height: 200px;*/
 	flex-shrink: 0;
@@ -313,13 +420,34 @@ footer {
 	justify-content: space-between;
 	padding: 15px
 }
+.section__wrapper-content {
+	width: 100%;
+}
+.section__skills {
+	margin-bottom: auto;
+}
 
+.row {
+	width: 100%;
+	display: flex;
+	padding: 0 10px;
+	align-items: center;
+}
+.ml-auto{
+	margin-left: auto;
+}
+
+.image-responsive {
+	display: block;
+	width: 100%;
+}
+.underline{
+	text-decoration: underline;
+}
 
 @media only screen and (max-width: 1200px) {
 
 }
-
-
 @media only screen and (max-width: 992px) {
 
 }
@@ -331,29 +459,47 @@ footer {
 		flex-direction: column-reverse;
 	}
 
-	.contact-info {
-		padding-bottom: 30px;
-		margin-left: unset;
-		margin-right: auto;
-
+	.col-md-6 {
+		flex-direction: column;
 	}
-
-	.wide-window-text-show {
-		display: none;
-	}
-
-	.narrow-window-text-show {
-		display: block;
-	}
-
 
 }
-
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width: 480px) {
 	.wrapper-page {
 		padding: 5px;
+	}
+	.col-sm-6 {
+		flex-direction: column;
+		max-width:230px;
+		margin: 0 auto;
+	}
+	.img-wrapper{
+		margin-right: auto;
+	}
+	.my-pic{
+		padding: 10px;
+	}
+	.content{
+		padding: 10px 0px 0 0px;
+	}
+	.section__title{
+		padding-left: 15px;
+	}
+	h2.title-section2,
+	.content span,
+	.purpose {
+		padding-left: 15px;
+	}
+	.section__skills {
+		margin-bottom: 20px;
+	}
+	.ml-auto {
+		 margin-left: unset;
+	}
+	.row{
+		align-items: unset;
 	}
 
 }
