--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
 
-
+/*font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;*/
 * {
 	margin: 0;
 	padding: 0;
@@ -43,14 +44,13 @@ ul li{
 	list-style:none;
 }
 h1, h2, h3 {
-	font-family: 'Oswald', sans-serif;
-	font-weight: 300;
-	letter-spacing: 1px;
+	font-family: 'Roboto', sans-serif;
+	opacity: 0.7;
 	color: #03204d;
 }
 
 span {
-	font-family: Oswald, 'sans-serif';
+	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
 	letter-spacing: 1px;
 }
@@ -66,10 +66,8 @@ h1.main-title {
 header {
 	position: relative;
 	width: 100%;
-
 	box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
 	background-color: #03204d;
-	/*background-color: rgba(128, 128, 128, 0.2);*/
 	border: 2px solid rgba(128, 128, 128, 0.3);
 }
 
@@ -97,10 +95,9 @@ header {
 
 
 p {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
 	font-size: 16px;
-	line-height: 120%;
 	padding-top: 10px;
 	color: #1c2026;
 	opacity: .8;
@@ -139,7 +136,7 @@ p {
 }
 
 .git-text, .my-pet, .certificates, .nav-text {
-	font-family: Oswald, 'sans-serif';
+	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 	line-height: 100%;
 	font-size: 1rem;
@@ -148,7 +145,6 @@ p {
 	color: #f3f3f3;
 	position: relative;
 	z-index: 50;
-
 }
 
 .wrapper-page {
@@ -168,14 +164,13 @@ p {
 	width: 100%;
 	padding: 10px 20px 0 20px;
 	box-shadow: 5px 5px 5px -1px rgba(0, 0, 0, .3);
-	/*background-color: rgba(128, 128, 128, 0.1);*/
 	border: 1px solid rgba(128, 128, 128, 0.3);
 }
 
 
 .section__introduction {
 	display: flex;
-	padding-bottom: 5rem;
+
 }
 
 
@@ -188,7 +183,7 @@ p {
 .col1,
 .col3,
 .col4 {
-	font-family: Oswald, 'sans-serif';
+	font-family: 'Roboto', sans-serif;
 	font-weight: 200;
 }
 
@@ -249,7 +244,6 @@ p {
 	color: #fff;
 	display: inline-flex;
 	font-weight: 400;
-	letter-spacing: 1px;
 	opacity: 1;
 
 }
@@ -288,9 +282,8 @@ p {
 .dropdown-title {
 	white-space: nowrap;
 	display: inline-block;
-	font-family: Oswald, 'sans-serif';
+	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
-	letter-spacing: 1px;
 	text-transform: capitalize;
 
 }
@@ -351,7 +344,10 @@ p {
 	top: 10px;
 	left: 0;
 }
-
+.color-b{
+	color:#03204d;
+	font-weight: 500;
+}
 .active:before {
 	content: '';
 	display: block;
@@ -366,8 +362,8 @@ p {
 
 .responsibility-list li {
 	list-style: none;
-	font-size: 14px;
-	letter-spacing: 1px;
+	font-size: 1rem;
+	line-height: 1.5rem;
 	font-weight: 300;
 }
 
@@ -393,17 +389,15 @@ p {
 	width: 100%;
 }
 .section__experience p{
-	font-size: 14px;
-	letter-spacing: 1px;
+	font-size: 1rem;
 	font-weight: 300;
 	opacity: 1;
+	line-height: 1.4rem;
 }
 footer {
-	/*max-height: 200px;*/
 	flex-shrink: 0;
 	background-color: #03204d;
 	border: 2px solid rgba(128, 128, 128, 0.3);
-
 }
 
 .footer__title {
@@ -446,6 +440,21 @@ footer {
 .underline{
 	text-decoration: underline;
 }
+.mb-1{
+	margin-bottom: 10px;
+}
+.mt-1{
+	margin-top: 10px;
+}
+.mb-2{
+	margin-bottom: 20px;
+}
+.mt-2{
+	margin-top: 20px;
+}
+.section__education{
+	margin-bottom: 30px;
+}
 
 @media only screen and (max-width: 1200px) {
 
@@ -485,9 +494,7 @@ footer {
 	.my-pic{
 		padding: 10px;
 	}
-	.content{
-		padding: 10px 0px 0 0px;
-	}
+
 	.section__title{
 		padding-left: 15px;
 	}
